SigmaCodebackup3rdSep/objects/Resource__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>BillingRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-4</fullName>
                </value>
                <value>
                    <fullName>5-8</fullName>
                </value>
                <value>
                    <fullName>9-12</fullName>
                </value>
                <value>
                    <fullName>13-16</fullName>
                </value>
                <value>
                    <fullName>17-20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_data_sent_to_IoT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is data sent to IoT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_IoT_configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you want this resource/Machine to configure with IoT sensors?</inlineHelpText>
        <label>Need IoT configuration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Type__c</field>
                <operation>equals</operation>
                <value>BOM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Quality Analyst</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
                <value>
                    <fullName>Web Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Roles__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sigma_IOT</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Roles__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Need_IoT_configuration__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Resource__c.ManufactureRun_Resource_Planning</value>
        </filters>
        <label>Sigma IOT</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <recordTypes>
        <fullName>ManufactureRun_Resource_Planning</fullName>
        <active>true</active>
        <label>ManufactureRun Resource Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Resources</fullName>
        <active>true</active>
        <label>Project Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resources</fullName>
        <active>true</active>
        <label>Resources</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>